y.output
Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT

    3 $@1: %empty

    4 $@2: %empty

    5 declaration: INT $@1 init_declarator $@2 ';'

    6 $@3: %empty

    7 $@4: %empty

    8 init_declarator: primary_expression $@3 '=' $@4 CONSTANT

    9 translation_unit: declaration
   10                 | %empty


Terminals, with rules where they appear

$end (0) 0
';' (59) 5
'=' (61) 8
error (256)
IDENTIFIER (258) 1
CONSTANT (259) 2 8
INT (260) 5


Nonterminals, with rules where they appear

$accept (8)
    on left: 0
primary_expression (9)
    on left: 1 2, on right: 8
declaration (10)
    on left: 5, on right: 9
$@1 (11)
    on left: 3, on right: 5
$@2 (12)
    on left: 4, on right: 5
init_declarator (13)
    on left: 8, on right: 5
$@3 (14)
    on left: 6, on right: 8
$@4 (15)
    on left: 7, on right: 8
translation_unit (16)
    on left: 9 10, on right: 0


State 0

    0 $accept: . translation_unit $end

    INT  shift, and go to state 1

    $default  reduce using rule 10 (translation_unit)

    declaration       go to state 2
    translation_unit  go to state 3


State 1

    5 declaration: INT . $@1 init_declarator $@2 ';'

    $default  reduce using rule 3 ($@1)

    $@1  go to state 4


State 2

    9 translation_unit: declaration .

    $default  reduce using rule 9 (translation_unit)


State 3

    0 $accept: translation_unit . $end

    $end  shift, and go to state 5


State 4

    5 declaration: INT $@1 . init_declarator $@2 ';'

    IDENTIFIER  shift, and go to state 6
    CONSTANT    shift, and go to state 7

    primary_expression  go to state 8
    init_declarator     go to state 9


State 5

    0 $accept: translation_unit $end .

    $default  accept


State 6

    1 primary_expression: IDENTIFIER .

    $default  reduce using rule 1 (primary_expression)


State 7

    2 primary_expression: CONSTANT .

    $default  reduce using rule 2 (primary_expression)


State 8

    8 init_declarator: primary_expression . $@3 '=' $@4 CONSTANT

    $default  reduce using rule 6 ($@3)

    $@3  go to state 10


State 9

    5 declaration: INT $@1 init_declarator . $@2 ';'

    $default  reduce using rule 4 ($@2)

    $@2  go to state 11


State 10

    8 init_declarator: primary_expression $@3 . '=' $@4 CONSTANT

    '='  shift, and go to state 12


State 11

    5 declaration: INT $@1 init_declarator $@2 . ';'

    ';'  shift, and go to state 13


State 12

    8 init_declarator: primary_expression $@3 '=' . $@4 CONSTANT

    $default  reduce using rule 7 ($@4)

    $@4  go to state 14


State 13

    5 declaration: INT $@1 init_declarator $@2 ';' .

    $default  reduce using rule 5 (declaration)


State 14

    8 init_declarator: primary_expression $@3 '=' $@4 . CONSTANT

    CONSTANT  shift, and go to state 15


State 15

    8 init_declarator: primary_expression $@3 '=' $@4 CONSTANT .

    $default  reduce using rule 8 (init_declarator)
